--- a/KeysReporting.WebAssembly.App/Server/appsettings.json
+++ b/KeysReporting.WebAssembly.App/Server/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DBTest": "Server=localhost;Database=CallDisposition;Integrated Security=true;Encrypt=false;TrustServerCertificate=true",
+    "DB": "Server=db866039463.hosting-data.io;Database=db866039463;User ID=dbo866039463;Password=test1234;Encrypt=false;TrustServerCertificate=true"
+  },
   "SeriLog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -16,10 +20,6 @@
       }
     ]
   },
-  "ConnectionStrings": {
-    "DBTest": "Server=localhost;Database=CallDisposition;Integrated Security=true;Encrypt=false;TrustServerCertificate=true",
-    "DB": "Server=db866039463.hosting-data.io;Database=db866039463;User ID=dbo866039463;Password=test1234;Encrypt=false;TrustServerCertificate=true"
-  },
   "APIConfig": {
     "Proxy": "http://winproxyus1.server.lan:3128",
     "Link": "https://api.na5.livevox.com",
@@ -28,7 +28,8 @@
   "JwtSettings": {
     "Issuer": "KeysReportingAPI",
     "Audience": "KeysReportingClient",
-    "DurationDays": 1
+    "DurationDays": 1,
+    "Key": "0336d353-5b99-42f2-8dd8-1082f2a41116"
   },
   "AllowedHosts": "*"
 }
