--- a/KeysReporting.WebAssembly.App/Server/appsettings.json
+++ b/KeysReporting.WebAssembly.App/Server/appsettings.json
@@ -13,6 +13,13 @@
     },
     "WriteTo": [
       {
+        "Name": "File",
+        "Args": {
+          "Path": "./logs/log-.txt",
+          "RollingInterval": "Day"
+        }
+      },
+      {
         "Name": "Seq",
         "Args": {
           "ServerURL": "http://localhost:5341/"
