Agent Report and FTP

--- a/KeysReporting.WebAssembly.App/Server/appsettings.json
+++ b/KeysReporting.WebAssembly.App/Server/appsettings.json
@@ -38,5 +38,12 @@
     "DurationDays": 1,
     "Key": "0336d353-5b99-42f2-8dd8-1082f2a41116"
   },
+  "FTP": {
+    "Proxy": "http://winproxyus1.server.lan",
+    "ProxyPort": "3128",
+    "Link": "phil.na5.livevox.com",
+    "User": "KEYS",
+    "Password": "k3yS360Mc0"
+  },
   "AllowedHosts": "*"
 }
