--- a/KeysReporting.WebAssembly.App/Server/appsettings.json
+++ b/KeysReporting.WebAssembly.App/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DBTest": "Server=localhost;Database=CallDisposition;Integrated Security=true;Encrypt=false;TrustServerCertificate=true",
+    "DBTest": "Server=localhost\\MSSQLserver01;Database=CallDisposition;Integrated Security=true;Encrypt=false;TrustServerCertificate=true",
     "DB": "Server=db866039463.hosting-data.io;Database=db866039463;User ID=dbo866039463;Password=test1234;Encrypt=false;TrustServerCertificate=true"
   },
   "SeriLog": {
